src/HomePage/HomePage.css
h1{
    position: absolute;
    top: 40%;
    left: 0;
    width: 100%;
 }

p {
    font-size: large;
    padding-top: 1rem;
}


.banner{
    height:10rem;
    width: 100%;
}

.index-intro{
    width:100%;
    background-color: #f3f3f3;
}

.index-intro .jumbotron {
    padding: 0px;
}

.banner-image {
    position: relative;
    width: 100%; /* for IE 6 */
 }

 .banner-title{
     color: white;
     position: absolute;
     top: 40%;
     left: 0;
     width: 100%;
 }

.studio-section{
    padding: 5rem 15%;
 }

 .studio-description {
    padding: 1rem 5rem;

 }



@media (max-width: 900px) {
    .carousel {
      width:auto;
      height:auto;
      padding: 5rem;
    }
}

.services-section {
    padding: 0 15%;
}

.card {
    width:100%;
}

.card-deck {
    padding-top: 3rem;
}

.about-mia {
    padding: 5% 15%;
}

#testimonials {
    text-align: center;
    background-color: #ddce7b;
    color: rgb(0, 0, 0);
}

